[gd_scene load_steps=2 format=3 uid="uid://7lacj2mfwdg8"]

[ext_resource type="Script" uid="uid://kex1han1w6s2" path="res://addons/inventory_manager/teleporter_panel.gd" id="1"]

[node name="PanelContainer" type="PanelContainer"]
offset_top = 26.0
offset_right = 248.0
offset_bottom = 132.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type: "
horizontal_alignment = 1

[node name="CheckBox" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Orientation:"

[node name="CheckBox" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Destination:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = -999999.0
max_value = 999999.0
prefix = "X:"

[node name="SpinBox2" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = -999999.0
max_value = 999999.0
prefix = "Y:"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "One use:"
horizontal_alignment = 3

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "On"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_type_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer3/CheckBox" to="." method="_on_orientation_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SpinBox" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SpinBox2" to="." method="_on_y_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer4/CheckBox" to="." method="_on_one_use_toggled"]
